# pixel-dungeon

./: .gitignore  AGENTS.md  POWERSHELL_GUIDE.md  README.md  REFACTORING_SUMMARY.md  Start-Dungeon.ps1  WINDOWS_COMPATIBILITY_REPORT.md  check_env.py  dungeon.ps1  install.ps1  install.sh  launcher.py  pixel_dungeon.py  pyproject.toml  run_game.py  start_dungeon.sh  uninstall.ps1  uninstall.sh
pixel_dungeon/: __init__.py  __main__.py  assets.py  config.py  exceptions.py  input_handler.py
pixel_dungeon/core/: __init__.py  commands.py  enemy.py  game.py  player.py
pixel_dungeon/systems/: __init__.py  achievements.py  particles.py  shop.py  upgrades.py
pixel_dungeon/ui/: __init__.py  renderer.py  screens.py
pixel_dungeon/utils/: __init__.py  i18n.py  ota.py  save_load.py  theme.py  validators.py
tests/: test_new_architecture.py
